# zlink

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  zlink.toml
cmake/: FetchZppBits.cmake
docs/: ARCHITECTURE.md  BUILDING.md  CUDA_PIPELINE.md  MANAGED_PIPELINE.md  MANAGED_PIPELINE_INTEGRATION.md  MEMORY_SUBSYSTEM.md  POINTER_MARSHALLING.md  WIRE_PROTOCOL.md  architecture.md  build-and-run.md  building.md  compression.md  cuda-pipeline.md  managed-pipeline.md  memory-system.md  memory.md  pipeline.md  pointer-marshalling.md  pytorch-over-zlink.md  rpc-framework.md  virtual-handles.md  wire-protocol.md
examples/cuda/: CMakeLists.txt  cuda_api.hpp  cuda_api_v2.hpp  cuda_client.cpp  cuda_client_v2.cpp  cuda_server.cpp  cuda_server_codegen.cpp  cuda_server_v2.cpp  cuda_server_v3.cpp  cuda_server_v4.cpp  cuda_shim.cpp  cuda_shim_codegen.cpp  cuda_shim_pytorch.cpp  cuda_shim_v2.cpp  cuda_test_client.cpp  cuda_test_server.cpp  cudart_shim.cpp  libcudart.version  nvidia_ml_shim.cpp  run_pytorch_zlink.sh  test_pytorch_zlink.py  zlink_cuda_init.py
examples/cuda/codegen/: codegen.py  cuda_functions.json  gen_api.hpp  gen_server.inc  gen_shim.inc  gen_symbol_map.inc
examples/libmath/: CMakeLists.txt  math_client.cpp  math_server.cpp
include/zlink/: chunk_cache.hpp  client.hpp  compress.hpp  config.hpp  connection_manager.hpp  cuda_dep_spec.hpp  cuda_pipeline.hpp  managed_pipeline.hpp  memory.hpp  memory_page_tracker.hpp  multiplexed_transport.hpp  prefetch_worker.hpp  ptr_map.hpp  rpc.hpp  server.hpp  shared_mem.hpp  shim.hpp  tcp_transport.hpp  transport.hpp  virtual_handle.hpp  write_behind_buffer.hpp  write_tracker.hpp
sim/: zlink_charts.py  zlink_sim.py
src/: chunk_cache.cpp  connection_manager.cpp  memory_page_tracker.cpp  memory_region.cpp  multiplexed_transport.cpp  prefetch_worker.cpp  ptr_map.cpp  rpc.cpp  server.cpp  server_main.cpp  shared_mem.cpp  tcp_transport.cpp  write_behind_buffer.cpp  write_tracker.cpp
tests/: CMakeLists.txt  test_compress.cpp  test_rpc.cpp
